--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -17,8 +17,11 @@
   </servlet-mapping>
   
   <!-- Default page to serve -->
-  <welcome-file-list>
+<!--   <welcome-file-list>
     <welcome-file>PlayersEngine.html</welcome-file>
+  </welcome-file-list> -->
+  <welcome-file-list>
+    <welcome-file>questbook.jsp</welcome-file>
   </welcome-file-list>
 
 </web-app>
