--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -21,10 +21,9 @@
 	</servlet-mapping>
 
 	<!-- Default page to serve -->
-	<!-- <welcome-file-list> <welcome-file>PlayersEngine.html</welcome-file> 
-		</welcome-file-list> -->
 	<welcome-file-list>
-		<welcome-file>questbook.jsp</welcome-file>
+		<welcome-file>PlayersEngine.html</welcome-file>
 	</welcome-file-list>
+	<!-- <welcome-file-list> <welcome-file>questbook.jsp</welcome-file> </welcome-file-list> -->
 
 </web-app>
